small fix for vertical alignment

--- a/client/src/scss/Dataset.scss
+++ b/client/src/scss/Dataset.scss
@@ -52,6 +52,7 @@
 .data-block {
     width: 25%;
     display: inline-block;
+    vertical-align: top;
 
     img {
         width: 50%;
@@ -61,7 +62,6 @@
 .img-titles {
     padding-bottom: 4em;
     font-family: OswaldLight !important;
-    max-height: 73px !important;
 }
 
 .img-blocks {
@@ -145,7 +145,7 @@
     }
 }
 
-@media screen and (max-width: 1050px) {
+@media screen and (max-width: 1075px) {
     .data-block {
         width: 33%;
     }
@@ -155,7 +155,7 @@
     }
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 775px) {
     .data-block {
         width: 50%;
     }
